# App-Clinica

./: Cargo.toml
lab-fron/: index.html  package-lock.json  package.json
lab-fron/src/: App.jsx  index.css
lab-fron/src/components/: ModalMensaje.jsx  ProtectedRoute.jsx  VincularExamenes.jsx
lab-fron/src/hooks/: useAuth.js
lab-fron/src/pages/: AgregarDiagnosticoPage.jsx  AgregarPacientePage.jsx  CambiarContrasenaPage.jsx  CitasPage.jsx  ExamenesPage.jsx  ExpedientesPage.jsx  HorariosPage.jsx  LoginPage.jsx  PacientesPage.jsx  RecuperarContrasenaPage.jsx  UsuariosPage.jsx
lab-fron/src/services/: api.js  auth.js  citas.js  examenes.js  expedientes.js  horarios.js  pacientes.js  usuarios.js
src/: main.rs
